might delete minority map

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2857,6 +2857,18 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_decision_cost_15armyxp_blocked:0 "£army_experience §R15§!"
  TUR_minority_decision:0 "Management of Minorities"
  TRS_minority_decision:0 "Management of Minorities"
+ TUR_armenian_minority_name:0 "£ww1_flag_ARM  Armenian Minority"
+ TUR_arab_minority_name:0 "£ww1_flag_ARB  Arab Minority"
+ TUR_greek_minority_name:0 "£ww1_game_rule_flag_GRE  Greek Minority"
+ TUR_jewish_minority_name:0 "£ww1_flag_ISR  Jewish Minority"
+ TUR_south_slavic_minority_name:0 "£ww1_game_rule_flag_YUG  South Slavic Minority"
+ TUR_albanian_minority_name:0 "£ww1_flag_ALB  Albanian Minority"
+ TUR_kurdish_minority_name:0 "£ww1_flag_KUR  Kurdish Minority"
+ TUR_assyrian_minority_name:0 "£ww1_flag_ASY  Assyrian Minority"
+ TUR_georgian_minority_name:0 "£ww1_flag_GEO  Georgian Minority"
+ TUR_romanian_minority_name:0 "£ww1_flag_ROM  Romanian Minority"
+ TUR_turkish_minority_name:0 "£ww1_flag_TUR  Turkish Minority"
+ TUR_azerbaijani_minority_name:0 "£ww1_flag_AZR  Azerbaijani Minority"
  TRS_arab_uprising_dummy:0 "Arab Uprising"
  TRS_arab_uprising_dummy_desc:0 "Our reforms in Syria have been vastly unpopular. As the opposition grew, it reached a point where it can trigger an all-out rebellion."
  TRS_arab_uprising_mission:0 "Arab Uprising"
