--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -54,14 +54,37 @@
  crisis_plus_20:0 "+ §G20§! Entente points!"
 
  #focus
+ HUN_from_the_ashes_of_the_empire:0 "From the Ashes of the Empire"
+
  HUN_social_democracy:0 "Magyar Népköztársaság"
- HUN_labor_reforms:0 "Labor Reforms"
- HUN_social_reforms:0 "Social Reforms"
- HUN_land_reforms:0 "Land Reform"
  HUN_fire_the_high_command:0 "Fire the High Command"
  HUN_the_soldiers_council:0 "Ally the Soldier's Council"
+
+ HUN_the_aster_compromise:0 "The Aster Compromise"
+ HUN_arrest_pepper_man:0 "Arrest József Pogány"
+ HUN_linder_plan:0 "Linder's Plan"
+ HUN_bohm_plan:0 "Böhm's Plan"
+
+ HUN_social_reforms:0 "Social Reforms"
+ HUN_land_reforms:0 "Land Reform"
  HUN_minority_politics:0 "Minority Politics"
  HUN_canton_project:0 "Kelet-Svájc Projekt"
+
+ HUN_homo_regius:0 "The King's Man"
+ HUN_new_national_government:0 "New National Government"
+ HUN_fate_of_army:0 "Fate of the Army"
+ HUN_strobls_cantonisation_plan:0 "Stróbl Kantonizációs Terv"
+ HUN_silence_minorities:0 "Silence Minorities"
+ HUN_conscript_minorities:0 "Conscript Minorities"
+ HUN_temporary_ban_on_political_parties:0 "Temporary Ban on Political Parties"
+ HUN_establish_food_commission:0 "Establish Food Commissions"
+ HUN_patriotic_war:0 "Honvédő Háború"
+ HUN_mobilise_our_industry:0 "Mobilise our Industry"
+ HUN_defence_of_hungary:0 "Defence of Hungary"
+ HUN_renewed_offensive:0 "Renewed Offensive"
+ HUN_a_seat_at_the_table:0 "A Seat at the Table"
+ HUN_national_dishonor:0 "National Dishonor"
+
  HUN_second_times_the_charm:0 "Magyar Köztársaság"
  HUN_suffrage_reforms:0 "Suffrage Reforms"
  HUN_withdraw_soviet_decrees:0 "Withdraw Soviet Decrees"
