--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -62,6 +62,7 @@
 
  HUN_the_aster_compromise:0 "The Aster Compromise"
  HUN_arrest_pepper_man:0 "Arrest József Pogány"
+ HUN_arrest_pepper_man_reward:0 "We will arrest §YJózsef Pogány§!, the president of the Soldiers' Soviet, which has been preventing our government from carrying out military reforms."
  HUN_linder_plan:0 "Linder's Plan"
  HUN_bohm_plan:0 "Böhm's Plan"
 
