avraam as starting socialist leader

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -322,37 +322,20 @@
  EGY_sultanate_neutrality_DEF:0 "the Sultanate of Egypt"
  EGY_kingdom_neutrality:0 "Kingdom of Egypt"
  EGY_kingdom_neutrality_DEF:0 "the Kingdom of Egypt"
- TUR_junta_neutrality:0 "Ottoman Junta"
- TUR_junta_neutrality_DEF:0 "the Interim Government of the Ottoman Empire"
- TUR_TRN:0 "Turan"
- TUR_TRN_DEF:0 "Turan"
- TUR_TRN_ADJ:0 "Turkic"
- TUR_TRN_fascism:0 "Pan Turania"
- TUR_TRN_fascism_DEF:0 "Pan Turania"
- TUR_TRN_democratic:0 "Federation of Turan"
- TUR_TRN_democratic_DEF:0 "the Federation of Turan"
- TUR_TRN_communism:0 "Union of Turkic Socialist Republics"
- TUR_TRN_communism_DEF:0 "the Union of Turkic Socialist Republics"
- TUR_ROM:0 "Third Rome"
- TUR_ROM_DEF:0 "the Third Roman Empire"
- TUR_ROM_ADJ:0 "Roman"
- TUR_ROM_fascism:0 "Turcicum Romanum Imperium"
- TUR_ROM_fascism_DEF:0 "the Turcicum Romanum Imperium"
- TUR_ROM_democratic:0 "Republic of Rûm"
- TUR_ROM_democratic_DEF:0 "the Republic of Rûm"
- TUR_ROM_communism:0 "Socialist Republic of Rûm"
- TUR_ROM_communism_DEF:0 "the Socialist Republic of Rûm"
- TUR_SOC:0 "Federative Republics of Balkans, Anatolia and Middle East"
- TUR_SOC_DEF:0 "the Federative Republics of Balkans, Anatolia and Middle East"
- TUR_SOC_ADJ:0 "Balkan, Anatolian and Middle Eastern"
- TUR_SOC_communism:0 "Federative Socialist Republics of Balkans, Anatolia and Middle East"
- TUR_SOC_communism_DEF:0 "the Federative Socialist Republics of Balkans, Anatolia the Middle East"
- TUR_SOC_communism_ADJ:0 "Balkan, Anatolian and Middle Eastern"
- TUR_revolter:0 "Sublime Ottoman State"
- TUR_revolter_DEF:0 "the Sublime Ottoman State"
- ottoman_sultanate_communism:0 "Ottoman Socialist Sultanate"
+ TUR_near_eastern_federation:0 "Near Eastern Federation"
+ TUR_near_eastern_federation_democratic:0 "Near Eastern Union"
+ TUR_near_eastern_federation_neutrality:0 "Near Eastern Union"
+ TUR_near_eastern_federation_communism:0 "Near Eastern Union"
+ TUR_near_eastern_federation_fascism:0 "Near Eastern Unitary State"
+ TUR_near_eastern_federation_DEF:0 "the Near Eastern Federation"
+ TUR_near_eastern_federation_democratic_DEF:0 "the Federation of Balkans, Anatolia the Middle East"
+ TUR_near_eastern_federation_neutrality_DEF:0 "the Federation of Balkans, Anatolia the Middle East"
+ TUR_near_eastern_federation_communism_DEF:0 "the Federative Socialist Republics of Balkans, Anatolia the Middle East"
+ TUR_near_eastern_federation_fascism_DEF:0 "the Unitary State of Balkans, Anatolia the Middle East"
+ TUR_near_eastern_federation_ADJ:0 "Near Eastern"
+ ottoman_sultanate_communism:0 "Ottoman People's Sultanate"
  ottoman_sultanate:0 "Ottoman Sultanate"
- ottoman_sultanate_communism_DEF:0 "the Ottoman Socialist Sultanate"
+ ottoman_sultanate_communism_DEF:0 "the Ottoman People's Sultanate"
  ottoman_sultanate_DEF:0 "the Ottoman Sultanate"
  TUR_ottoman_caliphate:0 "Ottoman Caliphate"
  TUR_ottoman_caliphate_communism:0 "Union of Socialist Muslim Communities"
@@ -922,15 +905,15 @@
  POL_republic_democratic_DEF:0 "the Republic of Poland"
  POL_SOVIET_communism:0 "Polish SSR"
  POL_SOVIET_communism_DEF:0 "the Polish Soviet Socialist Republic"
- TUR_REP:0 "Turkey"
- TUR_REP_DEF:0 "Turkey"
- TUR_REP_ADJ:0 "Turkish"
- TUR_REP_fascism:1 "Turkish State"
- TUR_REP_fascism_DEF:1 "the Turkish State"
- TUR_REP_democratic:0 "Republic of Turkey"
- TUR_REP_democratic_DEF:0 "the Republic of Turkey"
- TUR_REP_communism:0 "Socialist Republic of Turkey"
- TUR_REP_communism_DEF:0 "the Socialist Republic of Turkey"
+ TUR_republic:0 "Turkey"
+ TUR_republic_DEF:0 "Turkey"
+ TUR_republic_ADJ:0 "Turkish"
+ TUR_republic_fascism:1 "Turkish State"
+ TUR_republic_fascism_DEF:1 "the Turkish State"
+ TUR_republic_democratic:0 "Republic of Turkey"
+ TUR_republic_democratic_DEF:0 "the Republic of Turkey"
+ TUR_republic_communism:0 "Socialist Republic of Turkey"
+ TUR_republic_communism_DEF:0 "the Socialist Republic of Turkey"
  TUR_Sultanate:0 "Sultanate of Turkey"
  TUR_Sultanate_DEF:0 "the Sultanate of Turkey"
  TUR_Sultanate_ADJ:0 "Turkish"
