--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -185,9 +185,9 @@
  SWI_ADJ:0 "Swiss"
  TUR:0 "Ottoman Empire"
  TUR_DEF:0 "the Ottoman Empire"
+ TUR_communism:0 "Ottoman Socialist Federation"
+ TUR_communism_DEF:0 "the Ottoman Socialist Federation"
  TUR_ADJ:0 "Ottoman"
- TUR_communism:0 "Ottoman Socialist State"
- TUR_communism_DEF:0 "the Ottoman Socialist State"
  GRE_fascism:0 "Hellenic Junta"
  GRE_fascism_DEF:0 "Hellenic Junta"
  GRE_democratic:0 "Kingdom of Greece"
