--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -888,8 +888,10 @@
  TUR_CUP_democratic_party_long:0 "İttihat ve Terakki Fırkası"
  TUR_neutrality_party:0 "İTF"
  TUR_neutrality_party_long:0 "İttihat ve Terakki Fırkası"
- TUR_communism_party:0 "FMC"
- TUR_communism_party_long:0 "Fedakâran-ı Millet Cemiyeti"
+ TUR_communism_party:0 "SSİF"
+ TUR_communism_party_long:0 "Selanik Sosyalist İşçi Federasyonu"
+ TUR_proto_socialist_party:0 "FMC"
+ TUR_proto_socialist_party_long:0 "Fedakâran-ı Millet Cemiyeti"
  TUR_socialist_party:0 "OSF"
  TUR_socialist_party_long:0 "Osmanlı Sosyalist Fırkası"
  TUR_democratic_party:0 "HİF"
@@ -1776,7 +1778,8 @@
 
  WTH_democratic_party:0 "Batı Trakya Hükûmeti"
  WTH_neutrality_party:0 "Batı Trakya Hükûmeti"
- WTH_fascism_party:0 "Kuvâ-yi Milliye"
+ WTH_fascism_party:0 "Milli Meşrutiyet Fırkası"
+ WTH_fascism_party_long:0 "Milli Meşrutiyet Fırkası"
 
  CER_neutrality_party:0 "AO «KVZhD»"
  CER_neutrality_party_long:0 "Aktsionernoye Obshchestvo Kitayskoy Vostochnoy Zheleznoy Dorogi"
