--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4485,6 +4485,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.131.t:0 "Asien-Korps Arrived"
  ottoman.131.d:0 "Our ally [GER.GetName] has sent a detachment of their army to aid our war effort. Consisting of mostly pioneers and tropical medics, these troops will aid railway construction on our Palestinian front."
  ottoman.131.a:0 "May Allah bless [GER.GetName]."
+ ottoman.132.t:0 "End of the Socialist Workers' Federation"
+ ottoman.132.d:0 "Socialist Workers' Federation was the empire's greatest and most active socialist party. While other mostly left-wing socialist leaning parties were either nationalist minority parties or intellectual think-tanks, Socialist Workers Federation can be considered the only legitimate multi-ethnic socialist party. Yet with the loss of Thessaloniki, the party has been transferred to [345.owner.GetName] rather than continuing operating in our country."
+ ottoman.132.a:0 "Even the mainstream socialist party is nationalized."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
