--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4969,12 +4969,13 @@
  TUR_clamp_down_on_arab_dissent:0 "Clamp Down on Arab Dissent"
  TUR_clamp_down_on_arab_dissent_desc:0 "Our new centralist, integrationist and assimilationist policies has proven to be quite unpopular by our Arab population. As these lands remain as some of the last bits of our empire, we cannot afford to lose them. We'll do anything, to anyone, to retain the control of these lands."
  TUR_clamp_down_on_arab_dissent_tt:0 "Unlocks £decision_icon_small  §YSurpress Arab Dissent§! Decisions.\nUnlocks £decision_icon_small  §YBan Arab Newspapers§! Decisions.\nUnlocks £decision_icon_small  §YForced Labor in Middle East§! Decisions.\nUnlocks £decision_icon_small  §YRecruit Prisoner Recruits in Middle East§! Decisions.\n"
- has_south_slavic_minority:0 "Has £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! present within the state"
- has_greek_minority:0 "Has £ww1_game_rule_flag_GRE  §YGreek Minority§! present within the state"
- has_armenian_minority:0 "Has £ww1_flag_ARM  §YArmenian Minority§! present within the state"
- has_assyrian_minority:0 "Has £ww1_flag_ASY  §YAssyrian Minority§! present within the state"
- has_kurdish_minority:0 "Has £ww1_flag_KUR  §YKurdish Minority§! present within the state"
- has_arab_minority:0 "Has £ww1_flag_ARB  §YArab Minority§! present within the state"
+ has_south_slavic_minority:0 "Has £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!"
+ has_greek_minority:0 "Has £ww1_game_rule_flag_GRE  §YGreek Minority§!"
+ has_armenian_minority:0 "Has £ww1_flag_ARM  §YArmenian Minority§!"
+ has_assyrian_minority:0 "Has £ww1_flag_ASY  §YAssyrian Minority§!"
+ has_kurdish_minority:0 "Has £ww1_flag_KUR  §YKurdish Minority§!"
+ has_arab_minority:0 "Has £ww1_flag_ARB  §YArab Minority§!"
+ has_albanian_minority:0 "Has £ww1_flag_ALB  §YAlbanian Minority§!"
  TUR_three_pasha_government:0 "Three Pasha Government"
  TUR_three_pasha_government_desc:0 "İttihat ve Terakki Fırkası has been ruling the country as a shadow organization, a state within state. While many government officials were independent candidates, the party has always been involved with government matters, even if their members didn't have seats in it. Yet recent developments both in the empire and the party showed that the party is ready to take full command of the country. As the party prepares to take full control of the state; its most influential three members, Talat, Enver and Cemâl, is being nominated to divide their powers between each other and rule the country as a triumvirate."
  TUR_mobilize_the_civilian_population:0 "Mobilize the Civilian Population"
