--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -177,6 +177,7 @@
  TUR_harbiye_naziri:0 "Harbiye Nazırı"
  head_of_the_national_movement:0 "Head of the National Movement"
  islamist:0 "Islamist"
+ TUR_minority_revolutionary_leader:0 "Minority Revolutionary"
  TUR_minority_revolutionary:0 "Minority Revolutionary"
  TUR_minority_reformer:0 "Minority Reformer"
  TUR_ottoman_recruitable_population_factor_05:0 "Modify [TUR_get_state_minority] by\n:£manpower_texticon  Recruitable Population: §G+5.00%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
