removed map in favor of state indicators

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -42,7 +42,7 @@
  STATE_41: "Madrid"
  STATE_42: "Rhineland"
  STATE_43: "Northern Hungary"
- STATE_44: "Central Albania"
+ STATE_44: "Dirac"
  STATE_45: "Backa"
  STATE_46: "Muntenia"
  STATE_47: "Sterea Ellada"
@@ -104,7 +104,7 @@
  STATE_103: "Dalmatia"
  STATE_104: "Bosnia"
  STATE_105: "Montenegro"
- STATE_106: "Skopje"
+ STATE_106: "Üsküp"
  STATE_107: "Beograd"
  STATE_108: "Agmod"
  STATE_109: "Croatia"
@@ -182,7 +182,7 @@
  STATE_181: "Guarda"
  STATE_182: "Kriti"
  STATE_183: "Cyprus"
- STATE_184: "Eastern Macedonia"
+ STATE_184: "Serez"
  STATE_185: "Thessalia"
  STATE_186: "Peloponnisos"
  STATE_187: "Kerkyra"
@@ -198,10 +198,10 @@
  STATE_197: "Kherson"
  STATE_198: "Vinnytsia"
  STATE_199: "Bosilegrad"
- STATE_200: "Maritsa"
+ STATE_200: "Dimetoka"
  STATE_201: "Zhytomyr"
  STATE_202: "Kiev"
- STATE_203: "Ohrid"
+ STATE_203: "Manastır"
  STATE_204: "Mogilev"
  STATE_205: "Kaluga"
  STATE_206: "Minsk"
@@ -449,7 +449,7 @@
  STATE_448: "Trablus"
  STATE_449: "Lado"
  STATE_450: "Bengazi"
- STATE_451: "Rumelia"
+ STATE_451: "Ortaköy"
  STATE_452: "Marsa Matruh"
  STATE_453: "Sinai"
  STATE_454: "Palestine"
@@ -729,7 +729,7 @@
  STATE_728: "Kouang-Tchéou-Wan" #廣州灣
  STATE_729: "Macau"
  STATE_730: "St Pierre and Miquelon"
- STATE_731: "Central Macedonia"
+ STATE_731: "Florina"
  STATE_732: "Fergana"
  STATE_733: "Andaman"
  STATE_734: "Nendo"
@@ -755,11 +755,11 @@
  STATE_754: "Kufra"
  STATE_755: "Hohsi Corridor" #河西走廊
  STATE_756: "Eastern Thrace"
- STATE_757: "Western Thrace"
+ STATE_757: "Gümülcine"
  STATE_758: "Yanya"
- STATE_759: "Maleševo"
- STATE_760: "Novi Pazar"
- STATE_761: "East Montenegro"
+ STATE_759: "Radovişte"
+ STATE_760: "Yeni Pazar"
+ STATE_761: "Taşlıca"
  STATE_762: "Kattowitz"
  STATE_763: "Ostpreußen"
  STATE_764: "West Banat"
@@ -786,7 +786,7 @@
  STATE_785: "Picardy"
  STATE_786: "Mauritanian Desert"
  STATE_787: "Aleksandropol"
- STATE_788: "Rhodopes"
+ STATE_788: "Yukarı Cuma"
  STATE_789: "Walvis Bay"
  STATE_790: "Aegean Islands"
  STATE_791: "Ha'il"
@@ -801,7 +801,7 @@
  STATE_800: "Gyeonggi"
  STATE_801: "Chungcheong"
  STATE_802: "Gyeongsang"
- STATE_803: "Northern Epirus"
+ STATE_803: "Ergiri"
  STATE_804: "Al Hasa"
  STATE_805: "Northern Dobruja"
  STATE_806: "Kars"
@@ -824,7 +824,7 @@
  STATE_823: "Zaqatala"
  STATE_824: "Aydın"
  STATE_825: "Bandırma"
- STATE_826: "Olympe"
+ STATE_826: "Serfige"
  STATE_827: "Darfur"
  STATE_828: "Hakkari"
  STATE_829: "Urfa"
@@ -846,7 +846,7 @@
  STATE_845: "Tacna"
  STATE_846: "Mangalia"
  STATE_847: "Kosova"
- STATE_848: "Peja"
+ STATE_848: "İpek"
  STATE_849: "Tırnovacık"
  STATE_850: "Ticino"
  STATE_851: "Geneva"
@@ -868,8 +868,8 @@
  STATE_867: "South Bukovina"
  STATE_868: "Eastern Carpathians"
  STATE_869: "Saarland"
- STATE_870: "Shkodër"
- STATE_871: "Vlorë"
+ STATE_870: "İşkodra"
+ STATE_871: "Avlonya"
  STATE_872: "Chiaotung" #膠東
  STATE_873: "Ruhr"
  STATE_874: "Basra"
