--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2856,6 +2856,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_decision_cost_15armyxp:0 "£army_experience §Y15§!"
  TUR_decision_cost_15armyxp_blocked:0 "£army_experience §R15§!"
  TUR_minority_decision:0 "Management of Minorities"
+ TUR_minority_decision_desc:0 "Our empire stretches from Balkans to Basra, Caucasus to Cyrenaica. Yet since we're not the initial habiters of these lands, many people who lived here when we first came still resides within our boundries. Centralization and reform policies started during Tanzimat has resulted in many minorities in our empire displeasant with our rule."
+ ALB_minority_decision:0 "Management of Minorities"
+ ALB_minority_decision_desc:0 "While our autonomous vilayet is mostly consistet of Albanians, there are certain minorities within it. From Greeks of [758.GetName] to Serbs of [760.GetName], even the Turks in [203.GetName]; even the lands perceived as "Albanian" inhabit various minorities."
  TRS_minority_decision:0 "Management of Minorities"
  TUR_armenian_minority_name:0 "£ww1_flag_ARM  Armenian Minority"
  TUR_arab_minority_name:0 "£ww1_flag_ARB  Arab Minority"
