--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3281,6 +3281,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  
  TRS_arabist_movement:0 "Arabist Movement"
  TRS_arabist_movement_desc:0 "[TRS_arabist_movement_desc]"
+ TUR_has_naval_blockade:0 "Has national spirit §YNaval Blockade§!\n"
  TUR_has_arab_opposition:0 "Has national spirit §YArab Opposition§!\n"
  TRS_arabist_movement_desc1:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful."
  TRS_arabist_movement_desc2:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful.\n\nIn order to execute actions to surpress Arabists, we need to have a justification.\nCurrent §YOppression Justifications§!: [?TRS_oppression_justification|Y0]"
