--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -49,9 +49,7 @@
  HUN_gombos_gyula:0 "Gömbös Gyula"
 
 
- #custom tt
- crisis_plus_10:0 "+ §G10§! Entente points!"
- crisis_plus_20:0 "+ §G20§! Entente points!"
+ # Entente Mechanic
 
  #focus
  HUN_from_the_ashes_of_the_empire:0 "From the Ashes of the Empire"
@@ -99,14 +97,13 @@
  HUN_establish_the_national_assembly:0 "Establish the National Assembly"
 
  #idea
- HUN_economy_in_ruins:0 "Economy in ruins"
- HUN_entente_blockade:0 "Entente blockade"
- HUN_weak_administration:0 "Weak administration"
- HUN_neglected_army:0 "Neglected army"
- HUN_eastern_switzerland:0 "Eastern Switzerland"
- HUN_labor_unions:0 "Labor unions"
- HUN_move_unik:0 "Move universites"
- HUN_better_pay_idea:0 "Better pay"
+ HUN_economy_in_ruins:0 "Economy in Ruins"
+ HUN_entente_blockade:0 "Entente Blockade"
+ HUN_green_cadres:0 "Green Cadres"
+ HUN_soldiers_council_idea1:0 "Soldiers' Council"
+ HUN_soldiers_council_idea2:0 "Soldiers' Council"
+ HUN_neglected_army1:0 "Neglected Army"
+ HUN_neglected_army2:0 "Neglected Army"
  
  # decision
  HUN_crisis:0 "Hungarian lands"
@@ -116,5 +113,5 @@
  
  #events
  ww1_hungary.1.t:0 "autonomus for russins"
- ww1_hungary.1.a:0 "Release Rusins"
+ ww1_hungary.1.a:0 "Release Rusins?"
  ww1_hungary.1.b:0 "NO"
