Hungary Custom Tooltip

--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -55,10 +55,12 @@
  HUN_from_the_ashes_of_the_empire:0 "From the Ashes of the Empire"
 
  HUN_social_democracy:0 "Magyar Népköztársaság"
+ HUN_social_democracy_reward:0 "§RThis focus will be automatically completed once Mihály Károlyi becomes Prime Minister.§!"
  HUN_fire_the_high_command:0 "Fire the High Command"
  HUN_the_soldiers_council:0 "Ally the Soldier's Council"
 
  HUN_the_aster_compromise:0 "The Aster Compromise"
+ HUN_the_aster_compromise_reward:0 "§RThis focus will be automatically completed once Mihály Károlyi comes to an agreement with Joseph August von Österreich before the Battle of the Chain Bridge.§!"
  HUN_arrest_pepper_man:0 "Arrest József Pogány"
  HUN_arrest_pepper_man_reward:0 "We will arrest §YJózsef Pogány§!, the president of the Soldiers' Soviet, which has been preventing our government from carrying out military reforms."
  HUN_linder_plan:0 "Linder's Plan"
@@ -70,6 +72,7 @@
  HUN_canton_project:0 "Kelet-Svájc Projekt"
 
  HUN_homo_regius:0 "The King's Man"
+ HUN_homo_regius_reward:0 "§RThis focus will be automatically completed once Joseph August von Österreich successfully coups the Károlyi government.§!"
  HUN_new_national_government:0 "New National Government"
  HUN_fate_of_army:0 "Fate of the Army"
  HUN_strobls_cantonisation_plan:0 "Stróbl Kantonizációs Terv"
@@ -78,6 +81,7 @@
  HUN_temporary_ban_on_political_parties:0 "Temporary Ban on Political Parties"
  HUN_establish_food_commission:0 "Establish Food Commissions"
  HUN_patriotic_war:0 "Honvédő Háború"
+ HUN_patriotic_war_reward:0 "§RThis focus will be automatically completed once the Little Entente invade us.§!"
  HUN_mobilise_our_industry:0 "Mobilise our Industry"
  HUN_defence_of_hungary:0 "Defence of Hungary"
  HUN_renewed_offensive:0 "Renewed Offensive"
