kinda army tree

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5177,6 +5177,16 @@ ROM_expand_artillery_production:0 "Expand Artillery Production"
 ROM_expand_artillery_production_desc:0 ""
 ROM_promise_of_reform:0 "Promise Of Reform"
 ROM_promise_of_reform_desc:0 ""
+ROM_relocate_budget:0 "Relocate Budget"
+ROM_relocate_budget_desc:0 ""
+ROM_modernization_program:0 "Modernization Program"
+ROM_modernization_program_desc:0 ""
+ROM_organize_the_air_corps:0 "Organize The Air Corps"
+ROM_organize_the_air_corps_desc:0 ""
+ROM_bombing_raids:0 "Bombing Raids"
+ROM_bombing_raids_desc:0 ""
+ROM_french_air_mission:0 "French Air Mission"
+ROM_french_air_mission_desc:0 ""
  #custom tooltips
 ROM_the_kings_government:0 "The King's Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
