--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1876,13 +1876,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  CHI_ZHE_attack_FNG_desc:0 "The hegemony of Zhili crumbled, and Fengtian threatens. The only recourse is to take Nanjing and claim our own sphere in the south."
 
  #Turkey
- TUR_OPDA_CURRENCY_TOOLTIP:0 "§o                            Exchange Rates                      §!\n§d-----------------------------------------------------------------§!\n§Y3%§! §v£consumer_goods_texticon  Consumer Goods Factories factor =§! §Y0.295 Thousand Liras§!\n§d----------------------------------------------------------------§!"
- TUR_economy_decision:0 "State of the Economy"
- TUR_economy_name_text:0 "§oOttoman Foreign Debt§!"
- TUR_economy_name_text2:0 "§d---------------------------------§!"
- TUR_economy_name_lira:0 "§vOur Current Amount of Debt:§!"
- TUR_economy_name_lira2:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?opda_consumer_goods|.1%Y]" #§Y[?opda_lira] Thousand Liras§!
- TUR_economy_dissolved_name_lira2:0 "§Y*DISSOLVED*§!"
  TUR_OPDA_TOOLTIP:0 "[TUR_OPDA_TOOLTIP]"
  TUR_OPDA_DISSOLVED_TOOLTIP:0 "§YOttoman Public Debt Administration\n*DISSOLVED*§!"
  TUR_remove_debt_1:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-1.0%§!\n"
@@ -2431,7 +2424,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_add_debt_current_amount_RUS:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?RUS.opda_consumer_goods_opposite|.1%Y]\n\n"
  TUR_add_debt_current_amount_USA:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?USA.opda_consumer_goods_opposite|.1%Y]\n\n"
  empty_space:0 " \n"
- TUR_dissolve_the_debt_council_tooltip:0 "£consumer_goods_texticon  Consumer Goods Factories factor value for §YOttoman Public Debt Administration§! is §Y0.0%§!"
  TUR_domestic_weapon_research_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!"
  TUR_domestic_weapon_research_nsb_tt:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!"
  TUR_domestic_weapon_research_nsb_tt2:0 "\nModify [TUR_army_of_a_bygone_era_name] by\n£attack_texticon  Division Attack: §G+0.5%§!\n£defence_texticon  Division Defense: §G+0.5%§!\n"
@@ -2795,7 +2787,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  debt_less_than_0:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is more than §Y0.0%§!\n"
  debt_less_than_75:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is more than §Y75.0%§!\n"
  debt_less_than_45:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is more than §Y45.0%§!\n"
- TUR_dissolve_the_debt_council:0 "Dissolve the Debt Council"
  TUR_declare_moratorium:0 "Declare Moratorium"
  TUR_declare_moratorium_desc:0 "Our debt has become more than what we're able to pay. By declaring a moratorium, we'll be able to reduce the effects of our current debt. Yet this decision of ours in the long run will strain our economy."
  TUR_foreign_debt_payment:0 "[FROM.GetAdjective] Debt Payment"
@@ -2879,7 +2870,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_conscription_in_karak:0 "Conscription in Karak"
  TUR_conscription_in_karak_desc:0 "Druze minority in our empire has been resisting our centralization efforts. As previous Druze rebellion has proven, has proven, we have to strengthen our grip by increasing conscription and tax collection."
  TUR_conscription_in_karak_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n"
- TUR_conscription_in_karak_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n£supply_texticon  Local Supplies: §G+5%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.01%§!\n£war_support_modifiericons_texticon  War Support: §G+0.01%§!\n"
+ TUR_conscription_in_karak_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n£supply_texticon  Local Supplies: §G+5%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\nModify State's Modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.01%§!\n£war_support_modifiericons_texticon  War Support: §G+0.01%§!\n"
  TUR_conscription_in_karak_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n"
  TUR_truce_with_asir:0 "Truce With Asir"
  TUR_truce_with_asir_desc:0 "A debate in the court over Sharia law reignited Al-Idrisi's rebellion. As foreign wars seem imminent, we may have to have truce with them."
@@ -3029,12 +3020,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
 
  TUR_minority_level_down:0 "Modify [TUR_get_state_minority] by\n"
  TUR_minority_stability_war_support_down:0 "[TUR_minority_stability_war_support_down]"
- TUR_minority_stability_war_support_down_yes:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n"
+ TUR_minority_stability_war_support_down_yes:0 "\nModify State's Modification to §YSeparatist Sentiments§! by\n"
  TUR_integrate_syrian_vilayets:0 "Integrate [FROM.GetName]"
  TUR_integrate_syrian_vilayets_desc:0 "While Syrian vilayets have been an integral part of our empire for centuries, there are still some parts of these vilayets that doesnt recognize our legitimate rule. If we manage to increase popularity of our rule in these vilayets, we can easily integrate them."
  TUR_pro_ottoman_propaganda_for_shia:0 "Pro-Ottoman Propaganda for Shia in [FROM.GetName]"
  TUR_pro_ottoman_propaganda_for_shia_desc:0 "The Shia Muslim population in our Sunni empire has long been marginalized. By emphasizing on our united Muslim identity, we can mitigate the effects of the sectarian divisions."
- TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n"
+ TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\nModify State's Modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n"
  TUR_tax_collection_in_middle_east:0 "Tax Collection in [FROM.GetName]"
  TUR_tax_collection_in_middle_east_desc:0 "Centuries of neglection has left tax collection in [FROM.GetName] rather inefficient. If we manage to bring modern means of transportation to the region, we can easily improve tax collection methods."
  TUR_increase_conscription_in_middle_east:0 "Increase Conscription in [FROM.GetName]"
@@ -3056,10 +3047,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_forced_labor_in_middle_east_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-15%§!\n"
  TUR_recruit_prisoner_conscripts_in_middle_east:0 "Recruit Prisoner Conscripts in [FROM.GetName]"
  TUR_recruit_prisoner_conscripts_in_middle_east_desc:0 "Surpression of dissent in [FROM.GetName] has resulted in numerous Arab prisoners at our hands. Instead of wasting our precious recourses by imprisoning them, we can put them into use by forming penal battalions."
- TUR_recruit_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+1.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
+ TUR_recruit_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+1.00%§!\n\nModify State's Modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
  TUR_disband_prisoner_conscripts:0 "Disband Prisoner Conscripts"
  TUR_disband_prisoner_conscripts_desc:0 "Prisoner Conscripts have proven to be greater of a burden that they're a benefit to us. The only logical action would be to disband them."
- TUR_disband_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: [TUR_recruit_prisoner_conscripts_in_middle_east|=2%+]\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: [TUR_recruit_prisoner_conscripts_in_middle_east|=2%+]\n"
+ TUR_disband_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: [TUR_recruit_prisoner_conscripts_in_middle_east|=2%+]\n\nModify State's Modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: [TUR_recruit_prisoner_conscripts_in_middle_east|=2%+]\n"
  TUR_nationalize_greek_businesses:0 "Nationalize Greek Businesses in [FROM.GetName]"
  TUR_nationalize_greek_businesses_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
  TUR_nationalize_greek_businesses_tt:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
@@ -3249,7 +3240,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_stability_1:0 "£stability_texticon  Stability: §G+0.10%§!\n"
  TUR_minority_war_support_down:0 "[TUR_minority_war_support_down]"
  TUR_minority_war_support_normal:0 "£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
- TUR_minority_stability_up_1:0 "Modify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
+ TUR_minority_stability_up_1:0 "Modify State's Modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
 
  TUR_sway_the_army:0 "Sway the Army"
  TUR_sway_the_army_desc:0 "Army has always held an important position in the Ottoman society. Especially after the 31 March Incident, importance of army became more and more entrenched. Importance of the army even tips off the balance in the struggle for control over the regime."
@@ -3333,7 +3324,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_raise_bedouin_volunteers_desc:0 "As we've already secured support from the Bedouins, we can expand our support in other states."
  TUR_disband_bedouin_volunteers:0 "Disband Bedouin Volunteers"
  TUR_disband_bedouin_volunteers_desc:0 "Though we've previously alligned with the Bedouin volunteers, they pose a threat to the centralization of our state. Since they're no longer of use to us, we can disband them and revoke their privilages."
- TUR_disband_bedouin_volunteers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n"
+ TUR_disband_bedouin_volunteers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\nModify State's Modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n"
  TUR_boost_egyptian_opposition:0 "Boost Egyptian Opposition"
  TUR_boost_egyptian_opposition_desc:0 "Egyptian population and aristocracy for the most part still stands loyal to the Ottoman Caliph and Pan-Islamist ideals. As we're embroiled in a war with them, we can stir up the Egyptian opposition to sabotage the war effort of our enemies."
  TUR_contact_with_the_national_party:0 "Contact with the National Party"
