--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -180,8 +180,8 @@
  TUR_minority_revolutionary_leader:0 "Minority Revolutionary"
  TUR_minority_revolutionary:0 "Minority Revolutionary"
  TUR_minority_reformer:0 "Minority Reformer"
- TUR_ottoman_recruitable_population_factor_05:0 "Modify [TUR_get_state_minority] by\n:£manpower_texticon  Recruitable Population: §G+5.00%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
- TUR_ottoman_recruitable_population_factor_minus_05:0 "Modify [TUR_get_state_minority] by\n:£manpower_texticon  Recruitable Population: §R-5.00%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.20%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n"
+ TUR_ottoman_recruitable_population_factor_05:0 "Modify [TUR_get_state_minority] by\n:£manpower_texticon  Recruitable Population: §G+5.00%§!\nModify State's Modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
+ TUR_ottoman_recruitable_population_factor_minus_05:0 "Modify [TUR_get_state_minority] by\n:£manpower_texticon  Recruitable Population: §R-5.00%§!\nModify State's Modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.20%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n"
  TUR_modern_islamist:0 "Modern Islamist"
  TUR_modern_islamist_leader:0 "Modern Islamist"
  TUR_reformist_nationalist:0 "Reformist Nationalist"
