--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -50,7 +50,9 @@
 
 
  # Entente Mechanic
-
+HUN_entente_points_category:0 "Entente points"
+HUN_entente_points_category_desc:0 "placeholder"
+HUN_treaty_of_trianon:0 "Treaty of Trianon"
  #focus
  HUN_from_the_ashes_of_the_empire:0 "From the Ashes of the Empire"
 
